<resources>
    <string name="app_name">March Madness Quiz</string>
    <!-- Title of the quiz -->
    <string name="title">Welcome to \nMarch Madness!\nthe Quiz!</string>
    <!-- Question #1, multiple choice question -->
    <string name="question1">Q1) The first NCAA Men’s Basketball Tournament was held in:</string>
    <!-- Question #1 answer A -->
    <string name="q1_answer_A">1954</string>
    <!-- Question #1 answer B -->
    <string name="q1_answer_B">1939</string>
    <!-- Question #1 answer C -->
    <string name="q1_answer_C">1948</string>
    <!-- Question #1 answer D -->
    <string name="q1_answer_D">1950</string>
    <!-- Question #2, multiple choice question -->
    <string name="question2">Q2) Which school is the only one to win both the men’s and women’s national championships in the same year?</string>
    <!-- Question #2 answer A -->
    <string name="q2_answer_A">UCLA</string>
    <!-- Question #2 answer B -->
    <string name="q2_answer_B">Duke</string>
    <!-- Question #2 answer C -->
    <string name="q2_answer_C">UConn</string>
    <!-- Question #2 answer D -->
    <string name="q2_answer_D">Baylor</string>
    <!-- Question #3, fill in the blank question -->
    <string name="question3">Q3) What city has hosted the most Final Fours to date?</string>
    <!-- Question #3 answer hint text -->
    <string name="q3_answer">Q3 Answer</string>
    <!-- Question #4, true or false question -->
    <string name="question4">Q4) True or False: A 16 seed has never beaten a 1 seed</string>
    <!-- Question #4 answer A -->
    <string name="q4_answer_A">True</string>
    <!-- Question #4 answer B -->
    <string name="q4_answer_B">False</string>
    <!-- Question #5, multiple choice question -->
    <string name="question5">Q5) Not counting the play-in games, the March Madness bracket consists of _____ teams</string>
    <!-- Question #5 answer A -->
    <string name="q5_answer_A">64</string>
    <!-- Question #5 answer B -->
    <string name="q5_answer_B">68</string>
    <!-- Question #5 answer C -->
    <string name="q5_answer_C">32</string>
    <!-- Question #5 answer D -->
    <string name="q5_answer_D">60</string>
    <!-- Question #6, fill in the blank question -->
    <string name="question6">Q6) ________ (player’s name) holds the record for most points in a single tournament.</string>
    <!-- Question #6 answer hint text -->
    <string name="q6_answer">Q6 Answer</string>
    <!-- Question #7 question, multiple choice question -->
    <string name="question7">Q7) What year did all four number 1 seeds advance to the Final Four?</string>
    <!-- Question #7 answer A -->
    <string name="q7_answer_A">2004</string>
    <!-- Question #7 answer B -->
    <string name="q7_answer_B">2010</string>
    <!-- Question #7 answer C -->
    <string name="q7_answer_C">2008</string>
    <!-- Question #7 answer D -->
    <string name="q7_answer_D">2015</string>
    <!-- Question #8, multiple choice question -->
    <string name="question8">Q8) Since 1986 the national champion gets to keep/is given what item(s) from the final game?</string>
    <!-- Question #8 answer A -->
    <string name="q8_answer_A">The nets</string>
    <!-- Question #8 answer B -->
    <string name="q8_answer_B">Chairs</string>
    <!-- Question #8 answer C -->
    <string name="q8_answer_C">The hardwood (playing surface)</string>
    <!-- Question #8 answer D -->
    <string name="q8_answer_D">The basketball hoops</string>
    <!-- Text for submit button -->
    <string name="submit_button">Submit</string>
    <!-- Text for reset button -->
    <string name="reset_button">Reset</string>
    <!-- Perfect score toast message -->
    <string name="perfect_score_toast">8 out of 8, a perfect score!</string>
    <!-- First part of regular toast message for number of correct answers -->
    <string name="toast">You got </string>
    <!-- Second part of regular toast message for number of correct answers -->
    <string name="toast2"> out of 8, Congratulations!</string>

</resources>
