<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E64A19"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="bold-serif-monospace"
            android:text="@string/title" />

        <RadioGroup
            android:id="@+id/q1_RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question1" />

            <RadioButton
                android:id="@+id/q1_answer_A"
                style="@style/AnswerTextStyle"
                android:text="@string/q1_answer_A" />

            <RadioButton
                android:id="@+id/q1_answer_B"
                style="@style/AnswerTextStyle"
                android:text="@string/q1_answer_B" />

            <RadioButton
                android:id="@+id/q1_answer_C"
                style="@style/AnswerTextStyle"
                android:text="@string/q1_answer_C" />

            <RadioButton
                android:id="@+id/q1_answer_D"
                style="@style/AnswerTextStyle"
                android:text="@string/q1_answer_D" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/q2_RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question2" />

            <RadioButton
                android:id="@+id/q2_answer_A"
                style="@style/AnswerTextStyle"
                android:text="@string/q2_answer_A" />

            <RadioButton
                android:id="@+id/q2_answer_B"
                style="@style/AnswerTextStyle"
                android:text="@string/q2_answer_B" />

            <RadioButton
                android:id="@+id/q2_answer_C"
                style="@style/AnswerTextStyle"
                android:text="@string/q2_answer_C" />

            <RadioButton
                android:id="@+id/q2_answer_D"
                style="@style/AnswerTextStyle"
                android:text="@string/q2_answer_D" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question3" />

            <EditText
                android:id="@+id/q3_answer"
                style="@style/AnswerTextStyle"
                android:hint="@string/q3_answer"
                android:inputType="text" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/q4_RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question4" />

            <RadioButton
                android:id="@+id/q4_answer_A"
                style="@style/AnswerTextStyle"
                android:text="@string/q4_answer_A" />

            <RadioButton
                android:id="@+id/q4_answer_B"
                style="@style/AnswerTextStyle"
                android:text="@string/q4_answer_B" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/q5_RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question5" />

            <RadioButton
                android:id="@+id/q5_answer_A"
                style="@style/AnswerTextStyle"
                android:text="@string/q5_answer_A" />

            <RadioButton
                android:id="@+id/q5_answer_B"
                style="@style/AnswerTextStyle"
                android:text="@string/q5_answer_B" />

            <RadioButton
                android:id="@+id/q5_answer_C"
                style="@style/AnswerTextStyle"
                android:text="@string/q5_answer_C" />

            <RadioButton
                android:id="@+id/q5_answer_D"
                style="@style/AnswerTextStyle"
                android:text="@string/q5_answer_D" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question6" />

            <EditText
                android:id="@+id/q6_answer"
                style="@style/AnswerTextStyle"
                android:hint="@string/q6_answer"
                android:inputType="text" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/q7_RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question7" />

            <RadioButton
                android:id="@+id/q7_answer_A"
                style="@style/AnswerTextStyle"
                android:text="@string/q7_answer_A" />

            <RadioButton
                android:id="@+id/q7_answer_B"
                style="@style/AnswerTextStyle"
                android:text="@string/q7_answer_B" />

            <RadioButton
                android:id="@+id/q7_answer_C"
                style="@style/AnswerTextStyle"
                android:text="@string/q7_answer_C" />

            <RadioButton
                android:id="@+id/q7_answer_D"
                style="@style/AnswerTextStyle"
                android:text="@string/q7_answer_D" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question8" />

            <CheckBox
                android:id="@+id/q8_answer_A"
                style="@style/AnswerTextStyle"
                android:text="@string/q8_answer_A" />

            <CheckBox
                android:id="@+id/q8_answer_B"
                style="@style/AnswerTextStyle"
                android:text="@string/q8_answer_B" />

            <CheckBox
                android:id="@+id/q8_answer_C"
                style="@style/AnswerTextStyle"
                android:text="@string/q8_answer_C" />

            <CheckBox
                android:id="@+id/q8_answer_D"
                style="@style/AnswerTextStyle"
                android:text="@string/q8_answer_D" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:onClick="submitButton"
                android:text="@string/submit_button"
                android:textAllCaps="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:onClick="resetButton"
                android:text="@string/reset_button"
                android:textAllCaps="true" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>